simulador de dados
simula rolagem de dados

--- a/page.html
+++ b/page.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="dice.png" alt="dados">
+    <img src="dice.png" alt="dados" width="60%">
     
 </body>
 </html>
